# origin

BazyDannyh/Zadacha1/PostgreSQLCpp/: CMakeLists.txt  main.cpp
BazyDannyh/Zadacha2/CPPORM2/: CPPORM2.sln
BazyDannyh/Zadacha2/CPPORM2/CPPORM2/: CPPORM2.vcxproj  main.cpp
BazyDannyh/Zadacha2/ORMCPP/: ORMCPP.sln
BazyDannyh/Zadacha2/ORMCPP/ORMCPP/: ORMCPP.vcxproj  main.cpp
Kursovaya/Gonka/: Gonka.sln
Kursovaya/Gonka/Gonka/: AllroadBoots.cpp  AllroadBoots.h  Broom.cpp  Broom.h  CMakeLists.txt  Camel.cpp  Camel.h  Centavr.cpp  Centavr.h  Eagle.cpp  Eagle.h  FastCamel.cpp  FastCamel.h  Fly.cpp  Fly.h  FlyCarpet.cpp  FlyCarpet.h  Gonka.cpp  Gonka.vcxproj  Gonka.vcxproj.filters  Ground.cpp  Ground.h  Race.cpp  Race.h  Racer.cpp  Racer.h
MnogopotochostIAssinchron/Urok1/Zadacha1/MnogopotochnostOchered/: MnogopotochnostOchered.sln
Qt/Crashexe/Sekundomer/: mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Qt/DZ2/Zadacha1/DBEnter/: CMakeLists.txt  dbaccess.cpp  dbaccess.h  dbaccess.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/DZ2/Zadacha1/QtBDForm/: mainwindow.h  (+6 more)
Qt/DZ7/BazyDannyh/: CMakeLists.txt  database.cpp  dbaccess.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/DZ7/BazyDannyh2/: database.cpp  database.h  dbaccess.cpp  dbaccess.h  mainwindow.cpp  mainwindow.h
Qt/DZ8/UDPKlient/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
Qt/DZ9/TCPKlient/: mainwindow.cpp  structs.h  tcpclient.cpp  tcpclient.h
TTask/Func/TTask/: TTask.sln
TTask/TrialRefactoring/: TrialRefactoring.sln
TTask/TrialRefactoring/TrialRefactoring/: TrialRefactoring.cpp  TrialRefactoring.vcxproj  TrialRefactoring.vcxproj.filters
Urok1/Zadacha1/ZnakomstvoSViStR/: ZnakomstvoSViStR.sln
Urok10/Zadacha1/my_first_cmake_project/: CMakeLists.txt  my_first_cmake_program.cpp
Urok10/Zadacha2/ProektPoslojnee/: CMakeLists.txt  Chetyrehugolnik.cpp  Chetyrehugolnik.h  Figura.h  IerarhiyaClassov.cpp  Kvadrat.cpp  PrTreug.cpp  PrTreug.h  Romb.cpp  RvbTreug.h  RvnsTr.cpp  RvnsTr.h
Urok11/Zadacha1/Greet_library/: Greet_library.sln
Urok11/Zadacha2/LeaveLib/: LeaveLib.sln
Urok11/Zadacha3/DinBiblCMake/: DinBiblCMake.sln
Urok2/Zadacha1/: Enum1.cpp
Urok2/Zadacha2/: Scheta.cpp
Urok2/Zadacha3/: Adresa.cpp
Urok3/Zadacha1/Calculator/: Calculator.sln
Urok3/Zadacha2/Schetchik/: Schetchik.sln
Urok4/Zadacha1/Adresa2/: Adresa2.cpp  Adresa2.sln  Adresa2.vcxproj
Urok4/Zadacha2/Adresa3/: Adresa3.sln
Urok5/Zadacha1/Figury/: Figury.sln
Urok5/Zadacha2/StoronyIUgly/: StoronyIUgly.sln
Urok5/Zadacha3/Figury.Metody/: Figury.Metody.sln
Urok6/Zadacha1/MatFunkcii/: MatFunkcii.sln
Urok6/Zadacha2/Class/: Class.sln
Urok6/Zadacha3/IerarhiyaClassov/: IerarhiyaClassov.sln
Urok7/Zadacha 1/PreprocessornyeDirektivy/: PreprocessornyeDirektivy.sln
Urok7/Zadacha 2/MakrosSUB/: MakrosSUB.sln
Urok8/Zadacha1/ProstoeIskluchenie/: ProstoeIskluchenie.sln
Urok8/Zadacha2/IsklucheinyaVKonsruktorah/: IsklucheinyaVKonsruktorah.sln
Urok9/Zadacha1/SravneniyaVDrobyah/: SravneniyaVDrobyah.sln
Urok9/Zadacha2/OstalnyeOperaciiSDrobyami/: OstalnyeOperaciiSDrobyami.sln
(+345 files in other folders)
