cmake_minimum_required(VERSION 3.22.0)
project(Figury)
add_executable(Figury IerarhiyaClassov.cpp Chetyrehugolnik.cpp Chetyrehugolnik.h Figura.cpp Figura.h Kvadrat.cpp Kvadrat.h Paralgrm.cpp Paralgrm.h PrTreug.cpp PrTreug.h Pryamoug.cpp Pryamoug.h Romb.cpp Romb.h RvbTreug.cpp RvbTreug.h RvnsTr.cpp RvnsTr.h Treugolnik.cpp Treugolnik.h)